--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to Maple personal blog!</title>
+<title>Welcome to Maple!</title>
 <style>
     body {
         width: 35em;
@@ -11,6 +11,6 @@
 </style>
 </head>
 <body>
-<h1>Hey,Welcome to Maple!</h1>
+<h1>Hey,Welcome to Maple personal blog!</h1>
 </body>
 </html>
