--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to Maple!</title>
+<title>Welcome to Maple personal blog!</title>
 <style>
     body {
         width: 35em;
